2013 CSS: some proofing for near future complex example XSLT, improve print output
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3957 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -1802,7 +1802,6 @@ code {
     display: block;
     overflow: auto;
     overflow-y: hidden;
-    background-color: #EFEFF0;
     text-align: left;
 }
 
@@ -1821,6 +1820,13 @@ code {
 
 .screen .command {
     color: #306928;
+}
+
+.complex-example .example-contents {
+    margin: 5px 0;
+    padding: 3px 15px 6px 12px;
+    border-left: 3px solid #999;
+    background-color: #F9F9F9;
 }
 
 .calloutlist {
@@ -1951,11 +1957,6 @@ div.figure .figure-title-wrap {
     background-color: #202020;
     width: 100%;
     overflow: hidden;
-}
-
-div.figure a {
-    height: 0;
-    width: 0;
 }
 
 div.figure .number, div.figure .permalink:hover, div.figure .permalink:focus, div.figure .permalink:active {
@@ -2345,8 +2346,35 @@ body.draft {
     background: url(../images/draft.png) no-repeat fixed left 50%;
 }
 
+@page {
+    size: 100%;
+    margin: 20mm 22.5mm 22.5mm 22.5mm;
+}
+
 
 @media print {
+
+    #_header .book-icon {
+        height: 36px !important;
+        line-height: 34px;
+        padding: 0;
+        width: auto;
+        background-image: none;
+        color: #202020;
+    }
+
+    #_content > .set, #_content > .book, #_content > .article,
+    #_content > .part, #_content > .chapter, #_content > .preface,
+    #_content > .appendix, #_content > .glossary, #_content > .reference,
+    #_content > .refentry, #_content > .bibliography, #_content > .index {
+        padding: 0;
+    }
+
+    .callout {
+        border: 1px solid #439239;
+        color: #439239;
+    }
+
     #_fixed-header-wrap, #_toolbar-wrap, #_pickers, #_inward, #_footer-wrap,
     #_bottom-navigation, #_share-print {
         display: none;
@@ -2380,6 +2408,19 @@ body.draft {
 
     .ulink-url {
         display: inline;
+        -moz-hyphens: none;
+        hyphens: none;
+    }
+
+    .figure-title-wrap {
+        border: 1px solid #202020 !important;
+        width: -moz-calc(100% - 2px) !important;
+        width: -webkit-calc(100% - 2px) !important;
+        width: calc(100% - 2px) !important;
+    }
+
+    .figure-contents .mediaobject, .figure-title-wrap {
+        background-color: transparent !important;
     }
 }
 
@@ -2860,9 +2901,14 @@ body.draft {
     .sect1 > .screen-wrap, .sect2 > .screen-wrap, .sect3 > .screen-wrap,
     .sect4 > .screen-wrap, .sect5 > .screen-wrap, .sect6 > .screen-wrap,
     .sect > .screen-wrap, .chapter > .screen-wrap, .article > .screen-wrap,
-    .procedure-contents, .procedure-title-wrap + .procedure-contents, div.figure {
+    .procedure-contents, .procedure-title-wrap + .procedure-contents,
+    div.figure, .complex-example .example-contents {
         margin-left: -10px;
         margin-right: -10px;
+    }
+
+    .complex-example .example-contents {
+        padding: 3px 15px 6px 12px;
     }
 
     div.figure {
