Nicer colour for single-html crumb in DAPS documentation
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3973 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt2013/static-daps/css/style.css
+++ b/xslt2013/static-daps/css/style.css
@@ -36,7 +36,7 @@ a {
     height: 0;
 }
 
-::selection { /* Green Selections */
+::selection { /* Blue Selections */
     background-color: #3465A4;
     color: #FFF;
 }
@@ -217,7 +217,7 @@ html, body {
 
 #_header .crumbs .single-crumb:hover, #_header .crumbs .single-crumb:focus,
 #_header .crumbs .single-crumb:active {
-    background-color: #999;
+    background-color: #3465A4;
     color: #FFF;
 }
 
