2013 HTML: set a minimum width of 50px for all images; mostly as a precaution measure
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4014 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -1940,6 +1940,7 @@ div.figure .mediaobject {
     width: auto;
     margin: 0 auto;
     /* Please clean this mess out in ~2014 -- leave only the line with "calc" in there */
+    min-width: 50px;
     max-width: 100%;
     max-width: calc(100% - 2px);
     max-width: -moz-calc(100% - 2px);
@@ -1970,6 +1971,7 @@ div.figure .name, div.figure .permalink {
 }
 
 .informalfigure img {
+    min-width: 50px;
     max-width: 100%;
     display: block; /* inline images weirdly have some whitespace below them, thus block'ing */
     color: #999;
