--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -1428,7 +1428,7 @@ a.leads-to-page:active .name, .refentrytitle a:hover, .refentrytitle a:focus,
     line-height: 15px;
     overflow: hidden;
     padding: 0 3px;
-    border-bottom: 1px solid #FFF;
+    border-bottom: 1px solid transparent;
     background-color: #EEE;
     text-transform: uppercase;
     display: inline-block;
@@ -2331,6 +2331,36 @@ p.ds-message {
 .ds-head {
     font-style: normal;
     font-size: 22px;
+}
+
+.hidden {
+    background-color: #DCB2B2;
+    position: static;
+    margin-top: 20px;
+    margin-left: -10px;
+    margin-right: -10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+
+.hidden:before {
+    content: 'Hidden';
+    display: block;
+    float: left;
+    background-color: #8C0000;
+    color: #FFF;
+    padding: 3px 5px;
+    margin-top: 10px;
+}
+
+.hidden .hidden {
+    margin-top: 0;
+    padding-bottom: 0;
+}
+
+.hidden .hidden:before {
+    content: none;
 }
 
 body.draft {
