Make 'hidden' element colour a bit more subtle
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4041 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -2334,7 +2334,7 @@ p.ds-message {
 }
 
 .hidden {
-    background-color: #DCB2B2;
+    background-color: #E3C1C1;
     position: static;
     margin-top: 20px;
     margin-left: -10px;
