S rightly remarked that remark were not visible enough
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4053 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -2270,15 +2270,14 @@ div.blockquote {
 /* Review features */
 
 .remark, .doc-status {
-    background-color: #E6E0E8;
-    color: #000;
     font-style: normal;
     font-weight: normal;
 }
 
 .remark {
     padding: 1px 5px;
-    border-left: 3px solid #5C3566;
+    background-color: #8D7294;
+    color: #FFF;
 }
 
 .remark .remark {
@@ -2289,6 +2288,8 @@ div.blockquote {
 
 .doc-status {
     padding: 10px;
+    background-color: #E6E0E8;
+    color: #000;
 }
 
 .documentation > .doc-status {
