Fix display of prompts (tanks to Tom!)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4057 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -1756,7 +1756,7 @@ code {
     font-weight: 600;
 }
 
-.screen code.userprompt,.screen code.rootprompt {
+.prompt {
     -moz-user-select: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -1764,11 +1764,11 @@ code {
     user-select: none;
 }
 
-.screen code.userprompt {
+.prompt.user, .prompt.custom {
     color: #666;
 }
 
-.screen code.rootprompt {
+.prompt.root {
     color: #900;
 }
 
