--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -37,7 +37,7 @@ a {
 }
 
  /* Selection colour, the unprefixed Webkit version & the -moz-prefixed
-    version must be on separate liens for it to work. */
+    version must be on separate lines for it to work. */
 ::selection {
     background-color: #439239;
     color: #FFF;
