--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -2176,8 +2176,26 @@ table p, .informaltable table p {
 .table th, .informaltable th,
 .table td[colspan], .informaltable td[colspan],
 .table td[rowspan], .informaltable td[rowspan] {
-    vertical-align: middle;
     border: 1px solid #999;
+    background-color: #FFF;
+}
+
+.contains-rowspan {
+    border-top: 1px solid #999;
+}
+
+.table th[valign="top"], .informaltable th[valign="top"],
+.table td[valign="top"], .informaltable td[valign="top"] {
+    vertical-align: top;
+}
+
+.table th[valign="bottom"], .informaltable th[valign="bottom"],
+.table td[valign="bottom"], .informaltable td[valign="bottom"] {
+    vertical-align: bottom;
+}
+
+.table td[rowspan], .informaltable td[rowspan] {
+    background-color: #FFF;
 }
 
 .table td, .informaltable td{
