Make TOC view simpler (as suggested by Karl)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4078 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -716,12 +716,6 @@ a:active > .find-icon {
     line-height: 22px;
 }
 
-.bubble a:hover .keycap, .bubble a:focus .keycap, .bubble a:active .keycap,
-.bubble a:hover .replaceable, .bubble a:focus .replaceable, .bubble a:active .replaceable,
-.bubble a:hover code, .bubble a:focus code, .bubble a:active code {
-    border-color: #FFF;
-}
-
 #_bubble-toc .active ol {
     display: block;
     position: absolute;
@@ -1889,6 +1883,14 @@ code {
 
 .toc dt {
     margin-bottom: 5px;
+}
+
+.toc dt *, #_bubble-toc li * {
+    font-weight: normal;
+    font-style: normal;
+    border-bottom: none;
+    display: inline;
+    padding: 0;
 }
 
 .indexdiv h3 {
