Make sure bold numbers before numbered lists never influence content of list
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4079 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -1548,7 +1548,6 @@ a.leads-to-page:active .name, .refentrytitle a:hover, .refentrytitle a:focus,
 
 .admonition p {
     margin: 10px 0 0 !important;
-    font-weight: normal;
 }
 
 /* Text styles */
@@ -2106,6 +2105,10 @@ ol.procedure, ol.substeps, ol.orderedlist {
     display: block;
     color: #439239;
     font-weight: 600;
+}
+
+ol.procedure, ol.substeps, ol.orderedlist {
+    font-weight: normal;
 }
 
 ol.procedure {
