--- a/xslt2013/static-daps/css/style.css
+++ b/xslt2013/static-daps/css/style.css
@@ -1547,7 +1547,6 @@ a.leads-to-page:active .name, .refentrytitle a:hover, .refentrytitle a:focus,
 
 .admonition p {
     margin: 10px 0 0 !important;
-    font-weight: normal;
 }
 
 /* Text styles */
@@ -2105,6 +2104,10 @@ ol.procedure, ol.substeps, ol.orderedlist {
     display: block;
     color: #3465A4;
     font-weight: 600;
+}
+
+ol.procedure, ol.substeps, ol.orderedlist {
+    font-weight: normal;
 }
 
 ol.procedure {
