CSS fallback for TOC bubble
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4083 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt2013/static/css/style.css
+++ b/xslt2013/static/css/style.css
@@ -683,6 +683,24 @@ a:active > .find-icon {
     padding: 10px;
 }
 
+/* Fallback for TOC bubble when Javascript is off. */
+.js-off .inactive:hover .active-contents,
+.js-off .inactive:focus .active-contents {
+    display: block !important;
+}
+
+/* We only need this to make sure the bubble does not close when the user is
+   hovering over the TOC button and then mouses over the gap between the button
+   and the bubble. */
+.js-off .bubble:before {
+    content: '';
+    background-color: transparent;
+    position: absolute;
+    top: -15px;
+    height: 15px;
+    width: 100%;
+}
+
 #_bubble-toc {
     overflow: hidden;
     height: 400px;
