--- a/opensuse2013/static/css/fonts-onlylocal.css
+++ b/opensuse2013/static/css/fonts-onlylocal.css
@@ -1,1 +1,1 @@
-/home/frootzowrath/gits/daps/trunk/daps/suse/suse2013/static/css/fonts-onlylocal.css
+../../../suse2013/static/css/fonts-onlylocal.css
