--- a/opensuse2013/static/css/brand.css
+++ b/opensuse2013/static/css/brand.css
@@ -1,3 +1,12 @@
 #_logo {
-    margin: 34px 22px 16px 0px !important;
+    margin: 25px 22px 25px 10px !important;
+}
+
+#_logo > img {
+	height: 45px;
+	width: auto;
+}
+
+#_header .crumbs {
+	margin-left: 130px;
 }
