Forbid screen contents from overflowing (again)

--- a/daps2013/static/css/style.css
+++ b/daps2013/static/css/style.css
@@ -1816,8 +1816,9 @@ code {
     line-height: 125%;
 }
 
-.verbatim-wrap > div {
+.verbatim-wrap > div .verbatim-wrap pre {
     display: block;
+    width: 100%;
     overflow: auto;
     overflow-y: hidden;
     text-align: left;
