--- a/suse2013/static/css/style.css
+++ b/suse2013/static/css/style.css
@@ -1817,8 +1817,9 @@ code {
     line-height: 125%;
 }
 
-.verbatim-wrap > div {
+.verbatim-wrap > div, .verbatim-wrap pre {
     display: block;
+    width: 100%;
     overflow: auto;
     overflow-y: hidden;
     text-align: left;
