Make Callouts uncopyable (issue #55)
Still works only with prefix, even in the most modern browsers. Sadly.

--- a/daps2013/static/css/style.css
+++ b/daps2013/static/css/style.css
@@ -1894,6 +1894,13 @@ code {
     font-weight: 600;
 }
 
+.verbatim-wrap .callout {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .calloutlist .callout {
     position: relative;
     top: 2px;
