Fix typo introduced in 2c274d8

--- a/daps2013/static/css/style.css
+++ b/daps2013/static/css/style.css
@@ -1834,7 +1834,7 @@ code {
     line-height: 125%;
 }
 
-.verbatim-wrap > div .verbatim-wrap pre {
+.verbatim-wrap > div, .verbatim-wrap pre {
     display: block;
     width: 100%;
     overflow: auto;
